--- a/git/assets/css/style.css
+++ b/git/assets/css/style.css
@@ -628,26 +628,90 @@ body, html {
 -------------------------------------------------*/
 /* ALL =================================== */
 body {
-  background-color: #161616;
+  background-color: #f9f7f4;
   height: 100%; }
 
-.wrapper .slideshow {
+.wrapper #slideshow-block {
   width: 640px;
-  height: 480px;
+  height: 540px;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   margin: auto; }
-  .wrapper .slideshow img {
+  .wrapper #slideshow-block .slideshow img {
+    border: solid 8px #fff;
+    border-radius: 2px;
     width: 100%;
     position: absolute;
     left: 0;
     top: 0;
-    box-shadow: 2px 2px 30px 0px #0a0a0a; }
-  .wrapper .slideshow .show {
+    box-shadow: 2px 2px 14px -3px #474747; }
+  .wrapper #slideshow-block .slideshow .show {
     z-index: 1; }
+  .wrapper #slideshow-block .slideshow-indicator {
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    text-align: center; }
+    .wrapper #slideshow-block .slideshow-indicator a {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      margin: 10px;
+      border-radius: 16px;
+      border: solid 1px #f0b4c6;
+      background-color: #fff; }
+      .wrapper #slideshow-block .slideshow-indicator a.active {
+        background-color: #f0b4c6; }
+  .wrapper #slideshow-block .slideshow-nav a {
+    position: absolute;
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    background-color: #f0b4c6;
+    text-indent: -99999px;
+    white-space: nowrap;
+    top: 50%;
+    margin-top: -20px;
+    -webkit-transition: 1s;
+    transition: 1s; }
+    .wrapper #slideshow-block .slideshow-nav a.prev {
+      left: -100px; }
+      .wrapper #slideshow-block .slideshow-nav a.prev:after {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 17px;
+        top: 50%;
+        margin-top: -4px;
+        width: 6px;
+        height: 6px;
+        border-left: 2px solid #fff;
+        border-top: 2px solid #fff;
+        -webkit-transform: rotate(-45deg);
+                transform: rotate(-45deg); }
+    .wrapper #slideshow-block .slideshow-nav a.next {
+      right: -100px; }
+      .wrapper #slideshow-block .slideshow-nav a.next:after {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 15px;
+        top: 50%;
+        margin-top: -4px;
+        width: 6px;
+        height: 6px;
+        border-right: 2px solid #fff;
+        border-bottom: 2px solid #fff;
+        -webkit-transform: rotate(-45deg);
+                transform: rotate(-45deg); }
+    .wrapper #slideshow-block .slideshow-nav a:hover {
+      opacity: 0.5; }
 
 /* PC =================================== */
 /* PC　ALL */
