アローとページャー（途中）

--- a/git/assets/css/style.css
+++ b/git/assets/css/style.css
@@ -664,54 +664,54 @@ body {
       margin: 10px;
       border-radius: 16px;
       border: solid 1px #f0b4c6;
-      background-color: #fff; }
+      background-color: #fff;
+      text-indent: -9999px;
+      white-space: nowrap; }
       .wrapper #slideshow-block .slideshow-indicator a.active {
         background-color: #f0b4c6; }
-  .wrapper #slideshow-block .slideshow-nav a {
+  .wrapper #slideshow-block .slideshow-nav .arrow {
     position: absolute;
     display: block;
     width: 40px;
     height: 40px;
     border-radius: 40px;
     background-color: #f0b4c6;
-    text-indent: -99999px;
-    white-space: nowrap;
     top: 50%;
     margin-top: -20px;
     -webkit-transition: 1s;
     transition: 1s; }
-    .wrapper #slideshow-block .slideshow-nav a.prev {
-      left: -100px; }
-      .wrapper #slideshow-block .slideshow-nav a.prev:after {
-        content: '';
-        display: block;
-        position: absolute;
-        left: 17px;
-        top: 50%;
-        margin-top: -4px;
-        width: 6px;
-        height: 6px;
-        border-left: 2px solid #fff;
-        border-top: 2px solid #fff;
-        -webkit-transform: rotate(-45deg);
-                transform: rotate(-45deg); }
-    .wrapper #slideshow-block .slideshow-nav a.next {
-      right: -100px; }
-      .wrapper #slideshow-block .slideshow-nav a.next:after {
-        content: '';
-        display: block;
-        position: absolute;
-        left: 15px;
-        top: 50%;
-        margin-top: -4px;
-        width: 6px;
-        height: 6px;
-        border-right: 2px solid #fff;
-        border-bottom: 2px solid #fff;
-        -webkit-transform: rotate(-45deg);
-                transform: rotate(-45deg); }
-    .wrapper #slideshow-block .slideshow-nav a:hover {
+    .wrapper #slideshow-block .slideshow-nav .arrow:hover {
       opacity: 0.5; }
+  .wrapper #slideshow-block .slideshow-nav .prev {
+    left: -100px; }
+    .wrapper #slideshow-block .slideshow-nav .prev:after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 17px;
+      top: 50%;
+      margin-top: -4px;
+      width: 6px;
+      height: 6px;
+      border-left: 2px solid #fff;
+      border-top: 2px solid #fff;
+      -webkit-transform: rotate(-45deg);
+              transform: rotate(-45deg); }
+  .wrapper #slideshow-block .slideshow-nav .next {
+    right: -100px; }
+    .wrapper #slideshow-block .slideshow-nav .next:after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 15px;
+      top: 50%;
+      margin-top: -4px;
+      width: 6px;
+      height: 6px;
+      border-right: 2px solid #fff;
+      border-bottom: 2px solid #fff;
+      -webkit-transform: rotate(-45deg);
+              transform: rotate(-45deg); }
 
 /* PC =================================== */
 /* PC　ALL */
