--- a/git/assets/_sass/index.scss
+++ b/git/assets/_sass/index.scss
@@ -48,58 +48,58 @@ body{
         border-radius: 16px;
         border: solid 1px #f0b4c6;
         background-color: #fff;
+        text-indent: -9999px;
+        white-space: nowrap;
         &.active{
           background-color: #f0b4c6;
         }
       }
     }
     .slideshow-nav{
-      a{
+      .arrow{
         position: absolute;
         display: block;
         width: 40px;
         height: 40px;
         border-radius: 40px;
         background-color: #f0b4c6;
-        text-indent: -99999px;
-        white-space: nowrap;
         top: 50%;
         margin-top: -20px;
         transition: 1s;
-        &.prev{
-          left: -100px;
-          &:after {
-            content: '';
-            display: block;
-            position: absolute;
-            left: 17px;
-            top: 50%;
-            margin-top: -4px;
-            width: 6px;
-            height: 6px;
-            border-left: 2px solid #fff;
-            border-top: 2px solid #fff;
-            transform: rotate(-45deg);
-          }
-        }
-        &.next{
-          right: -100px;
-          &:after {
-            content: '';
-            display: block;
-            position: absolute;
-            left: 15px;
-            top: 50%;
-            margin-top: -4px;
-            width: 6px;
-            height: 6px;
-            border-right: 2px solid #fff;
-            border-bottom: 2px solid #fff;
-            transform: rotate(-45deg);
-          }
-        }
         &:hover{
           opacity: 0.5;
+        }
+      }
+      .prev{
+        left: -100px;
+        &:after {
+          content: '';
+          display: block;
+          position: absolute;
+          left: 17px;
+          top: 50%;
+          margin-top: -4px;
+          width: 6px;
+          height: 6px;
+          border-left: 2px solid #fff;
+          border-top: 2px solid #fff;
+          transform: rotate(-45deg);
+        }
+      }
+      .next{
+        right: -100px;
+        &:after {
+          content: '';
+          display: block;
+          position: absolute;
+          left: 15px;
+          top: 50%;
+          margin-top: -4px;
+          width: 6px;
+          height: 6px;
+          border-right: 2px solid #fff;
+          border-bottom: 2px solid #fff;
+          transform: rotate(-45deg);
         }
       }
     }
